# davinci-resolve-mcp

./: README.md  pyproject.toml
config/: tool_policy.json
docs/: codex-cli-smoke-test.md
src/: server.py
src/utils/: tool_policy.py
tests/: test_marker_params.py  test_tool_policy.py
